<resources>
    <string name="app_name">Calculator</string>
    <string name="number1">1</string>
    <string name="number2">2</string>
    <string name="number3">3</string>
    <string name="number4">4</string>
    <string name="number5">5</string>
    <string name="number6">6</string>
    <string name="number7">7</string>
    <string name="number8">8</string>
    <string name="number9">9</string>
    <string name="number0">0</string>
    <string name="backspace">←</string>
    <string name="clear">C</string>
    <string name="sqrt">√</string>
    <string name="divide">/</string>
    <string name="multiplication">x</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="equal">=</string>
    <string name="point">.</string>
    <string name="plusMinus">±</string>
    <string name="result">0</string>
</resources>
