<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/bottomBar">
    >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/editResult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:ems="10"
            android:gravity="right"
            android:inputType="textPersonName"
            android:text="@string/result" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:shrinkColumns="*"
            android:stretchColumns="*">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <Button
                    android:id="@+id/btnClear"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/clear"
                    android:textColor="@android:color/white"
                    android:background="@android:color/black"
                    android:layout_marginRight="3dp"
                    android:layout_marginLeft="3dp"
                    android:layout_marginTop="3dp"
                    android:layout_marginBottom="3dp" />

                <Button
                    android:id="@+id/btnBack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/backspace"
                    android:textColor="@android:color/white"
                    android:background="@android:color/black"
                    android:layout_marginRight="3dp"
                    android:layout_marginLeft="3dp"
                    android:layout_marginTop="3dp"
                    android:layout_marginBottom="3dp" />

                <Button
                    android:id="@+id/btnSqrt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sqrt"
                    android:textColor="@android:color/white"
                    android:background="@android:color/black"
                    android:layout_marginRight="3dp"
                    android:layout_marginLeft="3dp"
                    android:layout_marginTop="3dp"
                    android:layout_marginBottom="3dp" />

                <Button
                    android:id="@+id/btnDivide"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/divide"
                    android:textColor="@android:color/white"
                    android:background="@android:color/black"
                    android:layout_marginRight="3dp"
                    android:layout_marginLeft="3dp"
                    android:layout_marginTop="3dp"
                    android:layout_marginBottom="3dp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <Button
                    android:id="@+id/btn7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/number7"
                    android:onClick="OnNumberButtonClick"
                    android:textColor="@android:color/white"
                    android:background="@android:color/black"
                    android:layout_marginRight="3dp"
                    android:layout_marginLeft="3dp"
                    android:layout_marginTop="3dp"
                    android:layout_marginBottom="3dp" />

                <Button
                    android:id="@+id/btn8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/number8"
                    android:onClick="OnNumberButtonClick"
                    android:textColor="@android:color/white"
                    android:background="@android:color/black"
                    android:layout_marginRight="3dp"
                    android:layout_marginLeft="3dp"
                    android:layout_marginTop="3dp"
                    android:layout_marginBottom="3dp" />

                <Button
                    android:id="@+id/btn9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/number9"
                    android:onClick="OnNumberButtonClick"
                    android:textColor="@android:color/white"
                    android:background="@android:color/black"
                    android:layout_marginRight="3dp"
                    android:layout_marginLeft="3dp"
                    android:layout_marginTop="3dp"
                    android:layout_marginBottom="3dp" />

                <Button
                    android:id="@+id/btnMultiplication"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/multiplication"
                    android:textColor="@android:color/white"
                    android:background="@android:color/black"
                    android:layout_marginRight="3dp"
                    android:layout_marginLeft="3dp"
                    android:layout_marginTop="3dp"
                    android:layout_marginBottom="3dp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <Button
                    android:id="@+id/btn4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/number4"
                    android:onClick="OnNumberButtonClick"
                    android:textColor="@android:color/white"
                    android:background="@android:color/black"
                    android:layout_marginRight="3dp"
                    android:layout_marginLeft="3dp"
                    android:layout_marginTop="3dp"
                    android:layout_marginBottom="3dp" />

                <Button
                    android:id="@+id/btn5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/number5"
                    android:onClick="OnNumberButtonClick"
                    android:textColor="@android:color/white"
                    android:background="@android:color/black"
                    android:layout_marginRight="3dp"
                    android:layout_marginLeft="3dp"
                    android:layout_marginTop="3dp"
                    android:layout_marginBottom="3dp" />

                <Button
                    android:id="@+id/btn6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/number6"
                    android:onClick="OnNumberButtonClick"
                    android:textColor="@android:color/white"
                    android:background="@android:color/black"
                    android:layout_marginRight="3dp"
                    android:layout_marginLeft="3dp"
                    android:layout_marginTop="3dp"
                    android:layout_marginBottom="3dp" />

                <Button
                    android:id="@+id/btnMinus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/minus"
                    android:textColor="@android:color/white"
                    android:background="@android:color/black"
                    android:layout_marginRight="3dp"
                    android:layout_marginLeft="3dp"
                    android:layout_marginTop="3dp"
                    android:layout_marginBottom="3dp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <Button
                    android:id="@+id/btn1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/number1"
                    android:onClick="OnNumberButtonClick"
                    android:textColor="@android:color/white"
                    android:background="@android:color/black"
                    android:layout_marginRight="3dp"
                    android:layout_marginLeft="3dp"
                    android:layout_marginTop="3dp"
                    android:layout_marginBottom="3dp" />

                <Button
                    android:id="@+id/btn2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/number2"
                    android:onClick="OnNumberButtonClick"
                    android:textColor="@android:color/white"
                    android:background="@android:color/black"
                    android:layout_marginRight="3dp"
                    android:layout_marginLeft="3dp"
                    android:layout_marginTop="3dp"
                    android:layout_marginBottom="3dp" />

                <Button
                    android:id="@+id/btn3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/number3"
                    android:onClick="OnNumberButtonClick"
                    android:textColor="@android:color/white"
                    android:background="@android:color/black"
                    android:layout_marginRight="3dp"
                    android:layout_marginLeft="3dp"
                    android:layout_marginTop="3dp"
                    android:layout_marginBottom="3dp" />

                <Button
                    android:id="@+id/btnPlus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/plus"
                    android:textColor="@android:color/white"
                    android:background="@android:color/black"
                    android:layout_marginRight="3dp"
                    android:layout_marginLeft="3dp"
                    android:layout_marginTop="3dp"
                    android:layout_marginBottom="3dp" />
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <Button
                    android:id="@+id/btnPlusMinus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/plusMinus"
                    android:textColor="@android:color/white"
                    android:background="@android:color/black"
                    android:layout_marginRight="3dp"
                    android:layout_marginLeft="3dp"
                    android:layout_marginTop="3dp"
                    android:layout_marginBottom="3dp" />

                <Button
                    android:id="@+id/btn0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/number0"
                    android:onClick="OnNumberButtonClick"
                    android:textColor="@android:color/white"
                    android:background="@android:color/black"
                    android:layout_marginRight="3dp"
                    android:layout_marginLeft="3dp"
                    android:layout_marginTop="3dp"
                    android:layout_marginBottom="3dp" />

                <Button
                    android:id="@+id/btnPoint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/point"
                    android:textColor="@android:color/white"
                    android:background="@android:color/black"
                    android:layout_marginRight="3dp"
                    android:layout_marginLeft="3dp"
                    android:layout_marginTop="3dp"
                    android:layout_marginBottom="3dp" />

                <Button
                    android:id="@+id/btnEqual"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/equal"
                    android:textColor="@android:color/white"
                    android:background="@android:color/black"
                    android:layout_marginRight="3dp"
                    android:layout_marginLeft="3dp"
                    android:layout_marginTop="3dp"
                    android:layout_marginBottom="3dp" />
            </TableRow>
        </TableLayout>
    </LinearLayout>
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>